Actualización 2da Entrega

--- a/src/ItemListContainer/ItemListContainer.css
+++ b/src/ItemListContainer/ItemListContainer.css
@@ -1,3 +1,10 @@
-.itemlistcontainer__producto{
+.itemlistcontainer{
     display: flex;
+    margin-top: 16px;
+
+}
+
+.itemlistcontainer__producto{
+    margin-left: 16px;
+    margin-right: 16px; 
 }
